# research-assistant

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
python-backend/: main.py  requirements.txt
python-backend/services/: asr.py  literature_service.py  llm.py  pdf_service.py  rag.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: NoteEditor.tsx  NoteModal.tsx  WidgetOverlay.tsx  WikiText.tsx
src/lib/: api.ts  data.ts  wikilinks.ts
src/pages/: LiteraturePage.tsx  MeetingsPage.tsx  NotesPage.tsx  SettingsPage.tsx  WorksPage.tsx
src/stores/: appStore.ts
